[FIX] web_enterprise: Fix display issue on stat button
If a word on the stat button is too high (eg: Partner Ledger), a part of the label is truncated.

https://drive.google.com/file/d/0B8431e2MljwkRHZaMDZfWmtWMHM/view

--- a/web_enterprise/static/src/less/form_view.less
+++ b/web_enterprise/static/src/less/form_view.less
@@ -155,7 +155,7 @@
 
                 max-width: 70%;
                 padding-right: @odoo-statbutton-spacing;
-                line-height: 1;
+                line-height: 1.3;
 
                 .o_stat_value {
                     .o-text-overflow(inline-block);
